Portafolio primera version

--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@ Have fun creating your portfolio on this template!!! -->
     <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
 
     <!-- Title: add your Portfolio websites's title here -->
-    <title>[Your name here] | Developer</title>
+    <title>Gabriel Fajardo | Developer</title>
 
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
-    <meta name="keywords" content="[username], [name], skill" />
+    <meta name="keywords" content="[@gabo-hacStyle], [Gabriel Andres Fajardo Ortiz], Junior FullStack Developer, JavaScript, Python, ReactJS, TypeScript, HTML, CSS, Tailwind" />
 
     <!-- Improve your SEO by adding a small descrption of you -->
-    <meta name="description" content="[Your name here] | Developer" />
+    <meta name="description" content="Software Engineer Student | 3 years of experience as a Junior FullStack Developer, enphasizing Frontend and UI | JS, React & Python " />
 
     <!-- Add a your png Logo to the assets folder and change the href attr accordingly  -->
     <link rel="icon" type="image/png" href="./assets/devfolio-logo.png" />
 
     <!-- Add your primary-theme color for the value of content -->
-    <meta name="theme-color" content="#36d1dc" />
+    <meta name="theme-color" content="#1466c3" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
@@ -44,7 +44,7 @@ Have fun creating your portfolio on this template!!! -->
       so that a thumbnail image of your portfolio is shown while shared on other platform -->
     <meta
       property="og:image"
-      content="https://devfolio.js.org/assets/devfolio.png"
+      content=""
     />
 
     <!-- Twitter -->
@@ -105,12 +105,11 @@ Have fun creating your portfolio on this template!!! -->
     <div id="hero">
       <section class="container">
         <h1 class="hero-title">
-          Hi, my name is <span class="text-color-main name">Your Name</span>
-          <br />
-          I'm the Unknown Developer.
+          What's up, I'm <span class="text-color-main name">Gabriel Fajardo @gabo-hacStyle</span><br />  <br />
+          Junior FullStack Developer
         </h1>
         <p class="hero-cta">
-          <a class="cta-btn cta-btn--hero" href="#about">Get in touch</a>
+          <a class="cta-btn cta-btn--hero" href="#about">Know more about me</a>
         </p>
       </section>
       <a href="#about" class="scroll-down-link" aria-label="scroll-down">
@@ -127,7 +126,7 @@ Have fun creating your portfolio on this template!!! -->
           <div class="about-wrapper__image">
             <img
               class="img-fluid"
-              src="./assets/profile.png"
+              src="./assets/perfil.jpg"
               alt="Profile Image"
               width="450"
               height="350"
@@ -135,16 +134,18 @@ Have fun creating your portfolio on this template!!! -->
           </div>
           <div class="about-wrapper__info">
             <p class="about-wrapper__info-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Temporibus quae repellat, ad omnis distinctio velit saepe expedita
-              architecto cumque veritatis adipisci. Sapiente non, saepe hic
-              adipisci doloribus quisquam recusandae et.
+              Junior FullStack Developer for 3 years, especialyzed in Frontend. 
+              My bare passion is the software and help building products that simplify the day-to-day tasks, and
+              ready to take on new challenges. I would love to learn more about cybersecurity as well.
             </p>
             <p class="about-wrapper__info-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
-              obcaecati doloribus qui praesentium quae veniam esse mollitia
-              consequuntur nisi minima quasi et fugit quidem enim recusandae
-              delectus, iusto culpa rerum?
+              I have developed different projects ranging from personal ussage 
+              all the way to continental organizations. Programming in JS, TS, ReactJS and Python (Backend).
+            </p>
+            <p class="about-wrapper__info-text">
+              I enjoy working with a collaborative team as well as individually. I'm a 
+              fast learner and proactive. Always looking to learn new technologies and stay
+              up to date with the industry. 
             </p>
             <span class="about-wrapper__cta">
               <a href="#" class="cta-btn cta-btn--resume">View Resume</a>
@@ -162,34 +163,43 @@ Have fun creating your portfolio on this template!!! -->
           <h2 class="section-title dark-blue-text">Projects</h2>
 
           <!-- Each .row is a project -->
+
+          <!--Academic Platform-->
+          <!--Academic Platform-->
+          <!--Academic Platform-->
+          <!--Academic Platform-->
+
+
           <article class="row">
             <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">Project Title</h3>
+              <h3 class="project-wrapper__text-title">Academic Platform</h3>
               <p class="project-wrapper__text-info">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Deleniti voluptas, sit nam perspiciatis tempore aspernatur ullam
-                necessitatibus impedit repellendus vero sed ipsa eos beatae ab
-                sint saepe nostrum! Enim, perferendis.
+                
+                Originally designed for a Latin American academic institution, this platform has been 
+                reimagined to serve any academic institution. It efficiently displays a list of created courses and users
+                among the platform. 
+                It doesn't require a database connection,
+                utilizing local storage for data persistence and Redux for state management.
               </p>
               <div class="project-wrapper__text-btns">
                 <a
-                  href="#"
+                  href="https://academic-platform.vercel.app/"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="cta-btn cta-btn--hero cta-btn--projects"
                   >See Live</a
                 >
-                <a href="#" target="_blank" class="cta-btn text-color-main"
+                <a href="https://github.com/gabo-hacStyle/academic-platform" target="_blank" class="cta-btn text-color-main"
                   >Source Code</a
                 >
               </div>
             </div>
 
             <div class="project-wrapper__image">
-              <a href="#" target="_blank" rel="noopener noreferrer">
+              <a href="https://academic-platform.vercel.app/" target="_blank" rel="noopener noreferrer">
                 <div class="thumbnail rounded">
                   <img
-                    src="./assets/project.png"
+                    src="./assets/academic.jpg"
                     class="img-fluid"
                     alt="Project Image"
                     width="1366"
@@ -202,34 +212,42 @@ Have fun creating your portfolio on this template!!! -->
           <!-- /END Project -->
 
           <!-- Each .row is a project -->
+
+          <!--Dashboard app-->
+          <!--Dashboard app-->
+          <!--Dashboard app-->
+          <!--Dashboard app-->
+          <!--Dashboard app-->
+
           <article class="row">
             <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">Project Title</h3>
+              <h3 class="project-wrapper__text-title">E-commerce Dashboard</h3>
               <p class="project-wrapper__text-info">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Deleniti voluptas, sit nam perspiciatis tempore aspernatur ullam
-                necessitatibus impedit repellendus vero sed ipsa eos beatae ab
-                sint saepe nostrum! Enim, perferendis.
+                This is a dashboard app for any e-commerce platform. Built to produce 
+                an awesome user experience when reading and manging its data.
+                The project is on its early stages, but it's already functional and ready to be used.
+                It's built with ReactJS, React Context for the state, and stylized with tailwind and it's fully responsive. You can also
+                switch between light and dark mode. I acknowledge JSMastery for the guidance of the project in his Youtube Video
               </p>
               <div class="project-wrapper__text-btns">
                 <a
-                  href="#"
+                  href="https://dashboard-app-psi-vert.vercel.app/"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="cta-btn cta-btn--hero cta-btn--projects"
                   >See Live</a
                 >
-                <a href="#" target="_blank" class="cta-btn text-color-main"
+                <a href="https://github.com/gabo-hacStyle/dashboard-app" target="_blank" class="cta-btn text-color-main"
                   >Source Code</a
                 >
               </div>
             </div>
 
             <div class="project-wrapper__image">
-              <a href="#" target="_blank" rel="noopener noreferrer">
+              <a href="https://dashboard-app-psi-vert.vercel.app/" target="_blank" rel="noopener noreferrer">
                 <div class="thumbnail rounded">
                   <img
-                    src="./assets/project.png"
+                    src="./assets/dashboard.jpg"
                     class="img-fluid"
                     alt="Project Image"
                     width="1366"
@@ -242,34 +260,41 @@ Have fun creating your portfolio on this template!!! -->
           <!-- /END Project -->
 
           <!-- Each .row is a project -->
+
+          <!--To-do machine -->
+          <!--To-do machine -->
+          <!--To-do machine -->
+          <!--To-do machine -->
+
+
           <article class="row">
             <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">Project Title</h3>
+              <h3 class="project-wrapper__text-title">To-Do Machine</h3>
               <p class="project-wrapper__text-info">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Deleniti voluptas, sit nam perspiciatis tempore aspernatur ullam
-                necessitatibus impedit repellendus vero sed ipsa eos beatae ab
-                sint saepe nostrum! Enim, perferendis.
+                This is a to-do list app that allows you to manage all your tasks: add, search, delete and mark as done.
+                It's built with ReactJS and it's fully responsive.
+                It uses local storage for data persistence - it doesn't need a lot of logic behind either - and React Context. 
+                I acknowledge Platzi for the guidance of the project.
               </p>
               <div class="project-wrapper__text-btns">
                 <a
-                  href="#"
+                  href="https://gabo-hacstyle.github.io/to-do-machine/"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="cta-btn cta-btn--hero cta-btn--projects"
                   >See Live</a
                 >
-                <a href="#" target="_blank" class="cta-btn text-color-main"
+                <a href="https://github.com/gabo-hacStyle/to-do-machine" target="_blank" class="cta-btn text-color-main"
                   >Source Code</a
                 >
               </div>
             </div>
 
             <div class="project-wrapper__image">
-              <a href="#" target="_blank" rel="noopener noreferrer">
+              <a href="https://gabo-hacstyle.github.io/to-do-machine/" target="_blank" rel="noopener noreferrer">
                 <div class="thumbnail rounded">
                   <img
-                    src="./assets/project.png"
+                    src="./assets/to-do.jpg"
                     class="img-fluid"
                     alt="Project Image"
                     width="1366"
@@ -288,10 +313,10 @@ Have fun creating your portfolio on this template!!! -->
     <!-- Contact Section -->
     <section id="contact">
       <div class="container">
-        <h2 class="section-title">Contact</h2>
+        <h2 class="section-title">Contact Me</h2>
         <div class="contact-wrapper">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
-          <a href="#" class="cta-btn cta-btn--resume">Call to Action</a>
+          <p class="contact-wrapper__text">A fit for your business or future great projects?</p>
+          <a href="mailto:gabo2023brazil@gmail.com" class="cta-btn cta-btn--resume">Let's get in touch!</a>
         </div>
       </div>
     </section>
@@ -304,32 +329,38 @@ Have fun creating your portfolio on this template!!! -->
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
+          <!--
+            <a
+              href="#!"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="twitter"
+            >
+              <i class="fa-brands fa-twitter"></i>
+            </a>
+          -->
+          
           <a
-            href="#!"
-            target="_blank"
-            rel="noopener noreferrer"
-            aria-label="twitter"
-          >
-            <i class="fa-brands fa-twitter"></i>
-          </a>
-          <a
-            href="#!"
+            href="https://www.instagram.com/gabo_ortiz/"
             target="_blank"
             rel="noopener noreferrer"
             aria-label="instagram"
           >
             <i class="fa-brands fa-instagram"></i>
           </a>
+          <!--
+            <a
+              href="#!"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="codepen"
+            >
+              <i class="fa-brands fa-codepen"></i>
+            </a>
+          -->
+
           <a
-            href="#!"
-            target="_blank"
-            rel="noopener noreferrer"
-            aria-label="codepen"
-          >
-            <i class="fa-brands fa-codepen"></i>
-          </a>
-          <a
-            href="#!"
+            href="https://www.linkedin.com/in/gabriel-fajardo-ortiz-174b55268/"
             target="_blank"
             rel="noopener noreferrer"
             aria-label="linkedin"
@@ -337,7 +368,7 @@ Have fun creating your portfolio on this template!!! -->
             <i class="fa-brands fa-linkedin"></i>
           </a>
           <a
-            href="#!"
+            href="https://github.com/gabo-hacStyle"
             target="_blank"
             rel="noopener noreferrer"
             aria-label="github"
