--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@ Have fun creating your portfolio on this template!!! -->
           </div>
           <div class="about-wrapper__info">
             <p class="about-wrapper__info-text">
-              Junior FullStack Developer for 3 years, especialyzed in Frontend. 
-              My bare passion is the software and help building products that simplify the day-to-day tasks, and
-              ready to take on new challenges. I would love to learn more about cybersecurity as well.
+              Junior FullStack Developer for 3 years, specialized in Frontend development, both with the main
+              coding languages for the web, and with it's key concepts such as UI, UX and usability to give the
+              user the best and easiest experience. 
             </p>
             <p class="about-wrapper__info-text">
-              I have developed different projects ranging from personal ussage 
-              all the way to continental organizations. Programming in JS, TS, ReactJS and Python (Backend).
+              I have created projects ranging from personal ussage 
+              all the way to continental organizations. Experience in JS, TS, ReactJS and Python (Backend).
             </p>
             <p class="about-wrapper__info-text">
               I enjoy working with a collaborative team as well as individually. I'm a 
@@ -157,7 +157,7 @@ Have fun creating your portfolio on this template!!! -->
     <!-- /END About Section -->
 
     <!--Projects Section-->
-    <section id="projects">
+    <section class="projects">
       <div class="container">
         <div class="project-wrapper">
           <h2 class="section-title dark-blue-text">Projects</h2>
@@ -309,6 +309,107 @@ Have fun creating your portfolio on this template!!! -->
       </div>
     </section>
     <!-- End Projects Section -->
+
+    <!--Works Section-->
+    <section class="projects">
+      <div class="container">
+        <div class="project-wrapper">
+          <h2 class="section-title dark-blue-text">Real World Experience</h2>
+
+          <p class="project-wrapper__text-info">I have worked with continental organizations mainly in the research of the best UX 
+            and usability for their platforms, this includes things like the user-journey and the
+            cleanest possible UI components. Integrating the best practices of the industry and the services
+            used by the organizations.
+          </p>
+
+          <!-- Each .row is a project -->
+
+          <!--Academic Platform-->
+          <!--Academic Platform-->
+          <!--Academic Platform-->
+          <!--Academic Platform-->
+
+
+          <article class="row">
+            <div class="project-wrapper__text">
+              <h3 class="project-wrapper__text-title">Fatela Online</h3>
+              <p class="project-wrapper__text-info">
+                Virtual Campus for an organization based in Miami with clients among the whole continent.
+                I took the hands of the project to improve their visual to look modern and intuitive for both 
+                new clients and the ones that have been using the platform for years. I implemented 
+                these changes with OpenLMS - a powerful tool for e-learning platforms that uses moodle.org- 
+                and coding in CSS.
+              </p>
+              <div class="project-wrapper__text-btns">
+                <a
+                  href="https://fatelaonline-sandbox.mrooms.net/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="cta-btn cta-btn--hero cta-btn--projects"
+                  >See Page</a
+                >
+                <p  class="text-color-main"
+                  >OpenLMS, Moodle </p
+                >
+              </div>
+            </div>
+
+            <div class="project-wrapper__image">
+              <a href="https://academic-platform.vercel.app/" target="_blank" rel="noopener noreferrer">
+                <div class="thumbnail rounded">
+                  <img
+                    src="./assets/campus-fatelaonline.jpg"
+                    class="img-fluid"
+                    alt="Project Image"
+                    width="1366"
+                    height="767"
+                  />
+                </div>
+              </a>
+            </div>
+          </article>
+          <!-- /END Project -->
+
+          <article class="row">
+            <div class="project-wrapper__text">
+              <h3 class="project-wrapper__text-title">Fatela </h3>
+              <p class="project-wrapper__text-info">
+                Main page for the organization.
+              </p>
+              <div class="project-wrapper__text-btns">
+                <a
+                  href="https://fatela.org/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="cta-btn cta-btn--hero cta-btn--projects"
+                  >See Page</a
+                >
+                <p  class="text-color-main"
+                  >Wordpress, Elementor </p
+                >
+              </div>
+            </div>
+
+            <div class="project-wrapper__image">
+              <a href="https://academic-platform.vercel.app/" target="_blank" rel="noopener noreferrer">
+                <div class="thumbnail rounded">
+                  <img
+                    src="./assets/fatela.jpg"
+                    class="img-fluid"
+                    alt="Project Image"
+                    width="1366"
+                    height="767"
+                  />
+                </div>
+              </a>
+            </div>
+          </article>
+
+          
+
+        </div>
+      </div>
+    </section>
 
     <!-- Contact Section -->
     <section id="contact">
