--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ Have fun creating your portfolio on this template!!! -->
     <section class="projects">
       <div class="container">
         <div class="project-wrapper">
-          <h2 class="section-title dark-blue-text">Experience</h2>
+          <h2 class="section-title dark-blue-text" style="text-decoration: underline;">Experience</h2>
 
           <p class="project-wrapper__text-info">I have collaborated with LATAM organizations and companies based in the USA.  
             Building their platforms from bare beginnings. Or making their sites 
@@ -250,11 +250,11 @@ Have fun creating your portfolio on this template!!! -->
 
           <article class="row">
             <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">Fatela </h3>
+              <h3 class="project-wrapper__text-title">Fatela Online</h3>
               <p class="project-wrapper__text-info">
-                Just like above, the role here was integrate a better interface in the main page for the users.
-                This also in order to make the user a more confortable experience when navigating through the site.
-              </p>
+                I improved the visual appearance of the project to make it modern and intuitive for 
+                both new clients and long-time users. My role involved enhancing the main page interface 
+                to provide a more comfortable browsing experience.              </p>
               <div class="project-wrapper__text-btns">
                 <a
                   href="https://www.fatelaonline.org/"
@@ -290,51 +290,14 @@ Have fun creating your portfolio on this template!!! -->
           <!--Academic Platform-->
 
 
-          <article class="row">
-            <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">Fatela Online</h3>
-              <p class="project-wrapper__text-info">
-                Virtual Campus for an organization based in Miami with clients among the whole continent.
-                I took the hands of the project to improve their visual to look modern and intuitive for both 
-                new clients and the ones that have been using the platform for years. I implemented 
-                these changes with OpenLMS - a powerful tool for e-learning platforms that uses moodle.org- 
-                and coding in CSS.
-              </p>
-              <div class="project-wrapper__text-btns">
-                <a
-                  href="https://fatelaonline-sandbox.mrooms.net/"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  class="cta-btn cta-btn--hero cta-btn--projects"
-                  >See Page</a
-                >
-                <p  class="text-color-main"
-                  >OpenLMS, Moodle </p
-                >
-              </div>
-            </div>
-
-            <div class="project-wrapper__image">
-              <a href="https://academic-platform.vercel.app/" target="_blank" rel="noopener noreferrer">
-                <div class="thumbnail rounded">
-                  <img
-                    src="./assets/campus-fatelaonline.jpg"
-                    class="img-fluid"
-                    alt="Project Image"
-                    width="1366"
-                    height="767"
-                  />
-                </div>
-              </a>
-            </div>
-          </article>
+          
           <!-- /END Project -->
 
           <!--Projects Section-->
     <section class="projects">
       <div class="container">
         <div class="project-wrapper">
-          <h2 class="section-title dark-blue-text">My personal projects</h2>
+          <h2 class="section-title dark-blue-text" style="text-decoration: underline;">My personal projects</h2>
 
           <!-- Each .row is a project -->
 
