--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ Have fun creating your portfolio on this template!!! -->
 
           <p class="project-wrapper__text-info">I have collaborated with LATAM organizations and companies based in the USA.  
             Building their platforms from bare beginnings. Or making their sites 
-            more confortable for the end users, taking them to an easier behave in the platforms.
+            more confortable for the end users, taking them to accomplish an easier behavior within the page.
           <br><br>
 
           <!-- Each .row is a project -->
