--- a/index.html
+++ b/index.html
@@ -123,16 +123,16 @@ Have fun creating your portfolio on this template!!! -->
       <div class="container">
         <h2 class="section-title">About Me</h2>
         <div class="row about-wrapper">
-          <div class="about-wrapper__image">
+          <div class="about-wrapper__image" style="border-radius: 4rem;">
             <img
               class="img-fluid"
-              src="./assets/perfil.jpg"
+              src="./assets/gabo-re-pro1.jpg"
               alt="Profile Image"
-              width="450"
-              height="350"
+              width="490"
+              height="300"
             />
           </div>
-          <div class="about-wrapper__info">
+          <div class="about-wrapper__info" style="text-align: left;">
             <p class="about-wrapper__info-text">
               <strong>+4 years</strong> specializing in frontend development.  
               From good sense of UX/UI all the waay to having experience in using the most advanced tools
@@ -164,7 +164,7 @@ Have fun creating your portfolio on this template!!! -->
           <h2 class="section-title dark-blue-text" style="text-decoration: underline;">Experience</h2>
 
           <p class="project-wrapper__text-info">I have collaborated with LATAM organizations and companies based in the USA.  
-            Building their platforms from bare beginnings. Or making their sites 
+            Building their platforms from bare beginnings. Or making their sites
             more confortable for the end users, taking them to accomplish an easier behavior within the page.
           <br><br>
 
