--- a/index.html
+++ b/index.html
@@ -181,13 +181,13 @@ Have fun creating your portfolio on this template!!! -->
                 among other especialities. This web platform is fully responsive. 
               </p>
               <div class="project-wrapper__text-btns">
-                <a
+                <!-- <a
                   href="https://www.dragon.kairosresearch.xyz/"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="cta-btn cta-btn--hero cta-btn--projects"
                   >See Page</a
-                >
+                > -->
                 <p  class="text-color-main"
                   >NextJs14, SWR, Zustand, Tailwindcss, RSC, TypeScript, ShadcnUi </p
                 >
@@ -340,7 +340,7 @@ Have fun creating your portfolio on this template!!! -->
             </div>
 
             <div class="project-wrapper__image">
-              <a href="https://academic-platform.vercel.app/" target="_blank" rel="noopener noreferrer">
+              <!-- <a href="https://academic-platform.vercel.app/" target="_blank" rel="noopener noreferrer">
                 <div class="thumbnail rounded">
                   <img
                     src="./assets/anrehis/login.png"
@@ -350,26 +350,12 @@ Have fun creating your portfolio on this template!!! -->
                     height="767"
                   />
                 </div>
-              </a>
-                <div class="thumbnail rounded" style="margin-top: 5rem;">
-                  <img
-                    src="./assets/anrehis/admin.png"
-                    class="img-fluid"
-                    alt="Project Image"
-                    width="1366"
-                    height="467"
-                  />
-                </div>
-                <div class="thumbnail rounded"  style="margin-top: 5rem;">
-                  <img
-                    src="./assets/anrehis/data.png"
-                    class="img-fluid"
-                    alt="Project Image"
-                    width="1366"
-                    height="767"
-                  />
-                </div>
-             
+              </a> -->
+              <video controls width="100%" height="auto">
+                <source src="./assets/anrehis/anrehis-demo.mp4" type="video/mp4" />
+                Your browser does not support the video tag.
+              </video>
+                
             </div>
           </article>
 
